# Hafnium

./: .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_POLICY.md  GOVERNANCE.md  LEGAL_DISCLAIMER.md  LICENSE  Makefile  NOTICE  PRIVACY.md  README.md  RELEASE.md  REPO_SETUP.md  SECURITY.md  SUPPORT.md  docker-compose.microservices.yaml  docker-compose.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-java-ci.yml  backend-java-release.yml  ci.yaml  ci.yml  codeql.yml  container-scan.yml  dependency-review.yml  docs-quality.yaml  provenance.yml  release-dry-run.yaml  release.yml  sbom.yml  scorecard.yml  security.yaml
contracts/asyncapi/: transaction-events.yaml
contracts/openapi/: identity-service.yaml  risk-engine.yaml
contracts/schemas/: customer.json
docs/: README.md
docs/adrs/: 0000-template.md  0006-stream-processing-choice.md  0007-model-serving-choice.md  0008-feature-store-choice.md  0009-secrets-management.md  001-event-driven-architecture.md  002-multi-tenant-isolation.md  003-pinn-architecture.md  004-opa-authorization.md  005-saga-pattern.md  010-flyway-migrations.md  011-error-prone-quality.md  README.md
docs/ai/: benchmarking-protocol.md  engineering-handbook.md  llm-redaction-and-safety.md  model-governance.md  pinn-specification.md
docs/api/: README.md
docs/architecture/: apis.md  backend.md  components.md  data-model.md  deployment.md  events.md  mlops-architecture.md  ops-architecture.md  overview.md
docs/audits/: docs-gap-audit-2025-12-16.md
docs/compliance/: README.md  auditability.md  backend-auditability.md  kyc-aml.md  policy-mapping.md
docs/devops/: deployment.md
docs/devsecops/: security-controls.md
docs/mlops/: backend-ml-integration.md
docs/release/: release-process.md
docs/runbooks/: README.md  backend-operations.md  incident-response.md  local-development.md  operations.md
docs/threat-model/: linddun.md  overview.md  stride.md  threat-model.md
infra/: docker-compose.yaml
infra/helm/: README.md
infra/helm/hafnium-backend/: Chart.yaml  values.yaml
infra/helm/hafnium-backend/templates/: _helpers.tpl  identity-service.yaml
infra/k8s/: README.md  identity-service.yaml  namespace.yaml
infra/k8s/base/: configmap.yaml  identity-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  namespaces.yaml  network-policies.yaml  risk-engine-service.yaml
infra/postgres/init/: 000_keycloak.sql  001_schema.sql
infra/terraform/: README.md  main.tf  versions.tf
infra/terraform/backend/: infrastructure.tf  main.tf  outputs.tf  variables.tf
infra/terraform/environments/: dev.tfvars.example
libs/: README.md
ml/: Makefile  pyproject.toml
ml/inference/: Dockerfile  server.py
ml/monitoring/: drift_detection.py
ml/pipelines/: evaluate.py  train.py
ml/registry/: model_card_template.md
ml/tests/: test_pipeline.py
ops/gitops/argocd/: project.yaml
ops/gitops/argocd/apps/: backend.yaml
ops/k8s/base/: configmap.yaml  kustomization.yaml  namespace.yaml  secrets.yaml
ops/k8s/policies/: cluster-policies.yaml
ops/runbooks/: incident-response.md
ops/security/: controls-mapping.md  secrets-management.md
ops/sre/: slis.md  slos.md
platform/envoy/: envoy.yaml
platform/keycloak/realms/: hafnium-realm.json
platform/loki/: loki.yaml
platform/observability/: prometheus.yml  tempo.yaml
platform/policies/: authz.rego
platform/policies/hafnium/: authz.rego  authz_test.rego
platform/prometheus/: prometheus.yaml
platform/tempo/: tempo.yaml
platform/vault/: README.md  config.hcl
scripts/: generate-sdk.sh  validate-contracts.sh
scripts/dev/: bootstrap.sh  setup.sh
scripts/e2e/: run-tests.sh
scripts/seed/: seed-db.sh  seed_data.sh
services/ai-platform/: Dockerfile.inference  README.md  pyproject.toml
services/ai-platform/features/: feature_definitions.py  feature_store.yaml
services/ai-platform/src/hafnium_ai/: __init__.py
services/ai-platform/src/hafnium_ai/inference/: __init__.py  service.py
services/ai-platform/src/hafnium_ai/ml_models/: __init__.py  risk_scoring.py
services/ai-platform/src/hafnium_ai/nn/: pinn.py
services/audit-log/: README.md
services/backend-java/: Dockerfile  Dockerfile.dev  README.md  build.gradle  gradle.properties  gradlew  settings.gradle
services/backend-java/api-facade/: Dockerfile  build.gradle
services/backend-java/case-service/: Dockerfile  build.gradle
services/backend-java/identity-service/: Dockerfile  build.gradle
services/backend-java/monitoring-service/: Dockerfile  build.gradle
services/backend-java/risk-engine-service/: Dockerfile  build.gradle
services/backend-java/screening-service/: Dockerfile  build.gradle
services/backend-java/signals-service/: Dockerfile  build.gradle
services/backend-java/vault-service/: Dockerfile  build.gradle
services/frontend-react/: package-lock.json  package.json
services/frontend-react/src/: App.tsx  index.css
services/risk-engine/: Dockerfile.dev  README.md  pyproject.toml
services/risk-engine/src/hafnium_risk/: __init__.py  config.py  dependencies.py  main.py
services/risk-engine/src/hafnium_risk/api/: routes.py
services/risk-engine/src/hafnium_risk/services/: risk_service.py
services/risk-engine/tests/: test_api.py
services/stream-processor/: Dockerfile.dev  README.md  build.gradle  gradle.properties  pyproject.toml
services/stream-processor/src/hafnium_stream/: __init__.py  app.py  config.py
services/stream-processor/src/hafnium_stream/processors/: enrichment.py  rules.py  scoring.py
services/stream-processor/src/main/java/dev/hafnium/stream/: AlertEnrichmentTopology.java  StreamProcessorApplication.java  TransactionScoringTopology.java
(+165 files in other folders)
