[project]
name = "hafnium-ml"
version = "0.1.0"
description = "Hafnium ML Pipelines for Risk Scoring"
readme = "docs/README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
training = [
    "mlflow>=2.10.0",
    "dvc>=3.38.0",
    "optuna>=3.5.0",
]
serving = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "grpcio>=1.60.0",
]

[project.scripts]
hafnium-train = "hafnium_ml.pipelines.train:main"
hafnium-evaluate = "hafnium_ml.pipelines.evaluate:main"
hafnium-serve = "hafnium_ml.inference.server:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=hafnium_ml --cov-report=term-missing"
