[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hafnium-ai-platform"
version = "1.0.0"
description = "Hafnium AI Platform - ML models for compliance and security"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Hafnium Project Contributors" },
]
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "feast>=0.35.0",
    "mlflow>=2.9.0",
    "bentoml>=1.1.0",
    "pillow>=10.1.0",
    "opencv-python-headless>=4.8.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]
training = [
    "torchvision>=0.16.0",
    "lightning>=2.1.0",
    "tensorboard>=2.15.0",
    "wandb>=0.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hafnium_ai"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
